--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "server.js",
   "scripts": {
     "dev": "nodemon",
+    "build":"tsc",
     "start": "node dist/server.js"
   },
   "keywords": [],
