--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "nodemon",
     "build":"tsc",
-    "start": "node dist/server.js"
+    "start": "node /src/dist/server.js"
   },
   "keywords": [],
   "author": "",
